--- a/style.css
+++ b/style.css
@@ -7,7 +7,10 @@ html {
 }
 
 .odin-recipes {
-    font-family: "Courier New", Courier, monospace;
-
-
+    font-family: "freight-big-pro";
+    font-size: 200px;
+    color: white;
+    text-align: center;
+    letter-spacing: -6.5px;
+    overflow-wrap: break-world;
 }
