--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
+*,
+*::before,
+*::after {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
 html {
     background: linear-gradient(rgba(0, 0, 0, 0.527),rgba(0, 0, 0, 0.5)) , url(./images/photo-1606787366850-de6330128bfc.jpeg);
     background-repeat: no-repeat;
@@ -8,34 +16,64 @@ html {
 
 /*General*/
 
-h1,
-h2,
-.recipes-heading {
+.container {
+    width: 650px;
+    margin: 0 auto;
+    padding: 20px;
+    color: snow;
     font-family: "freight-big-pro";
-    color: white;
-    overflow-wrap: break-world;
-    letter-spacing: -6.5px;
-    font-size: 125px;
+    background: linear-gradient(rgba(0, 0, 0, 0.33),rgba(0, 0, 0, 0.33))
 }
 
-h2 {
-    font-size: 100px; 
-}
-
-p,
 ul,
 ol {
-    color: white;
-    font-family: "freight-big-pro";
-    font-size: 30px;
-
+    list-style: none;
 }
+
+li {
+    margin-top: 5px;
+    margin-bottom: 5px;
+    color: gainsboro
+}
+
+p {
+    color: gainsboro;
+}
+
+img, 
+.description,
+.recipe-title{
+    margin-bottom: 20px;
+}
+
+img {
+    width: 100%;
+    border-radius: 30px;
+}
+.description {
+    text-align: justify;
+}
+
+
+ .ingredients {
+    display: inline-block;
+    width: 25%;
+    vertical-align: top;
+ }
+
+ .steps {
+    display: inline-block;
+    vertical-align: top;
+    width: 75%;
+ }
 
 
 /*Homepage*/
 
 .recipes-heading {
     text-align: center;
+    color: white ;
+    margin: 50px 0;
     font-size: 200px;
 }
 
@@ -45,8 +83,8 @@ ol {
 }
 
 .recipe-list li {
-    display: inline;
-    padding: 20px;
+    display: inline-block;
+    margin-left: 30px;
 }
 
 .recipe-list a{
