--- a/style.css
+++ b/style.css
@@ -70,6 +70,10 @@ img {
 
 /*Homepage*/
 
+.homepage-container{
+    background: linear-gradient(rgba(0, 0, 0, 0.33),rgba(0, 0, 0, 0.33));
+}
+
 .recipes-heading {
     text-align: center;
     color: white ;
